--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express-handlebars": "^3.1.0",
     "express-static-gzip": "^2.0.6",
     "moment": "^2.24.0",
+    "puppeteer": "^2.1.1",
     "random-useragent": "^0.3.1",
     "twitter": "^1.7.1"
   }
