--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js",
-    "startDev": "nodemon --inspect index.js"
+    "start": "node --http-parser=legacy index.js",
+    "startDev": "nodemon --inspect --http-parser=legacy index.js"
   },
   "author": "",
   "license": "ISC",
@@ -14,13 +14,16 @@
     "axios": "^0.19.2",
     "body-parser": "^1.19.0",
     "cheerio": "^1.0.0-rc.3",
+    "cookie-parser": "^1.4.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-handlebars": "^3.1.0",
+    "express-ip": "^1.0.4",
     "express-static-gzip": "^2.0.6",
     "moment": "^2.24.0",
     "puppeteer": "^2.1.1",
     "random-useragent": "^0.3.1",
+    "request-ip": "^2.1.3",
     "twitter": "^1.7.1"
   }
 }
