--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node --http-parser=legacy index.js",
-    "startDev": "nodemon --inspect --http-parser=legacy index.js"
+    "startDev": "nodemon --inspect --http-parser=legacy index.js",
+    "scss": "node-sass --watch client/src/scss -o client/dist/css"
   },
   "author": "",
   "license": "ISC",
@@ -25,5 +26,8 @@
     "random-useragent": "^0.3.1",
     "request-ip": "^2.1.3",
     "twitter": "^1.7.1"
+  },
+  "devDependencies": {
+    "node-sass": "^4.13.1"
   }
 }
